--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -50,3 +50,18 @@ release:
     name: tempo
   draft: false
   prerelease: auto
+
+brews:
+  - name: tempo
+    repository:
+      owner: atterpac
+      name: homebrew-tap
+      token: "{{ .Env.HOMEBREW_TAP_TOKEN }}"
+    directory: Formula
+    homepage: "https://github.com/atterpac/tempo"
+    description: "Terminal UI for Temporal workflow management"
+    license: "MIT"
+    install: |
+      bin.install "tempo"
+    test: |
+      system "#{bin}/tempo", "--version"
